grammar.js
    source: ($) => repeat(choice($._gap, $._form)),
    _gap: ($) => prec(PREC.GAP, $._ws),
    _form: ($) =>
      prec.right(
        choice(
          // atoms
          $._definition,
          $.variable_setter,
          $.variable_binding,
          $.number,
          // $.special_form,
          $.special_syntax,
          $.string,
          $.char,
          $.symbol,
          $.vector,
          $.char_table,
          $.bool_vector,
          $.hash_table,
          $.bytecode,
          $.record,
          $.text_properties,
          $.interactive,
          $.list,
          // $.keyword,
          $._dotted_pair_list,
          // some other reader macros
          $.fn_quote,
          $.quote,
          $.backquote,
          $.splice,
          $.backquote_eval,
          $.no_read_syntax
        )
      ),

    text_properties: ($) =>
      seq(
        "#(",
        $.string,
        repeat(seq($._form, $._form, $._form)),
        field("close", token.immediate(")"))
      ),

    exponent: ($) => prec(PREC.EXP_LIT, token.immediate(EXPONENT)),
    decimal: ($) => prec(PREC.FLOAT_LIT, token.immediate(DECIMAL)),
    integer: ($) => prec.right(token.immediate(INTEGER)),

    float: ($) => choice(prec.right(2, $.exponent), prec.right(1, $.decimal)),
    number: ($) => prec.right(choice($.float, $.integer)),

    char: ($) =>
      prec.left(
        seq(
          choice(
            ALPHA_ESC_CHAR,
            UNICODE_NAME_CHAR,
            LOWER_CODE_POINT_CHAR,
            UPPER_CODE_POINT_CHAR,
            HEX_CHAR,
            OCTAL_CHAR,
            KEYBIND_CHAR,
            META_OCTAL_CHAR
          )
        )
      ),

    boolean: ($) => token(BOOLEAN),
    // Look for dot with space afterward for dotted notation
    keyword: ($) => token(seq(":", SYMBOL)),
    symbol: ($) =>
      prec(
        PREC.NORMAL,
        choice(
          prec(10, $.boolean),
          // alias(token(seq(":", SYMBOL)), $.keyword),
          $.keyword,
          $.param_keyword,
          token(SYMBOL),
          // allow for dot to be symbol
          // TODO: only allow at end of list
          alias(token("."), $.dot),
          choice("defcustom", "cl-defmethod", "cl-defstruct", "cl-defgeneric"),
          token.immediate(/(cl-)?let(\*)?/),
          token.immediate(/((cl-)?def(subst|un)|lambda)/),
          token.immediate(/[a-z]?set(f|q)(-(local|default))?/),
          token.immediate(/(cl-|pcase-)?def(ine-compiler-)?macro/),
          token.immediate(/def(var|const)((-mode)?-local)?/)
        )
      ),

    quote: ($) => seq(field("marker", "'"), $._form),
    fn_quote: ($) => seq(field("marker", "#'"), $._form),
    backquote_eval: ($) => seq(field("marker", ","), $._form),
    splice: ($) => seq(field("marker", ",@"), $._form),
    list: ($) =>
      seq(
        field("open", token.immediate("(")),
        repeat($._cons),
        field("close", token.immediate(")"))
      ),
    _cons: ($) =>
      prec.right(
        seq(
          $._form,
          // dotted pair without quotations can be the cdr of a cons cell
          // TODO: Only allow in the final cons cell of list
          optional(choice($._cons, $.dotted_pair))
        )
      ),

    string: ($) =>
      prec(
        2,
        seq(
          field("open", token.immediate('"')),
          repeat(
            choice(
              $.lisp_code,
              alias(
                choice(";", $._unescaped_double_string_fragment),
                $.string_fragment
              ),
              $.null,
              $.escape_sequence
            )
          ),
          field("close", token.immediate('"'))
        )
      ),
    _unescaped_double_string_fragment: ($) =>
      token.immediate(
        choice(prec(2, /([^`"\\])+/), prec(1, seq("`", optional(/([^'"\\])+/))))
      ),

    _octal_esc: ($) => token.immediate(OCTAL_ESC),
    vector: ($) =>
      seq("[", repeat(choice(field("value", $._form), $._gap)), "]"),

    char_table: ($) =>
      seq(
        field("open", choice("#^[", "#^^[")),
        repeat(choice($._form, $._gap)),
        "]"
      ),

    bool_vector: ($) =>
      seq(
        "#&",
        repeat(DIGIT),
        /"/,
        choice(/\^./, repeat($._octal_esc)),
        field("close", /"/)
      ),
    variable_definition: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          "(",
          field(
            "special_form",
            alias(token.immediate(/def(var|const)((-mode)?-local)?/), $.symbol)
          ),
          choice(
            seq(field("name", $.symbol), field("initvalue", $._form)),
            seq(
              field("name", $.symbol),
              field("initvalue", $._form),
              field("docstring", $.string)
            ),
            seq(
              field("mode", $.symbol),
              field("name", $._form),
              field("initvalue", $._form),
              optional(field("docstring", $.string))
            )
          ),
          ")"
        )
      ),

    slot: ($) =>
      prec.right(
        choice(
          field("name", $.symbol),
          seq(
            "(",
            field("name", $.symbol),
            field("default", $._form),
            repeat(field("option", seq($.keyword, $._form))),
            ")"
          )
        )
      ),
    struct_definition: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          "(",
          field("macro", alias("cl-defstruct", $.symbol)),
          field("name", choice($.symbol, $._form)),
          optional(field("docstring", optional($.string))),
          optional(field("slot", repeat($.slot))),
          ")"
        )
      ),
    bytecode: ($) => prec(PREC.SPECIAL, seq("#[", repeat($._form), "]")),

    hash_table: ($) => seq("#s(hash-table", repeat($._form), ")"),
  },
});
