test/corpus/bytecode_literal.txt
================================================================================
Bytecode literals
================================================================================

#[1 2 3 4]

--------------------------------------------------------------------------------

(source
 (bytecode
  (number
   (integer))
  (number
   (integer))
  (number
   (integer))
  (number
   (integer))))
