test/corpus/floats.txt
================================================================================
Float literals
================================================================================

1.0
-.1
3E5
1.0e+INF

--------------------------------------------------------------------------------

(source
 (number (float (decimal)))
 (number (float (decimal)))
 (number (float (exponent)))
 (number (float (exponent))))
