test/corpus/integers.txt
================================================================================
Integer literals
================================================================================

1
-1.
+1234

#x2603
#o23003
#b101010

--------------------------------------------------------------------------------

(source
 (number (integer))
 (number (integer))
 (number (integer))
 (number (integer))
 (number (integer))
 (number (integer)))
