test/corpus/multiple_characters.txt
================================================================================
Multiple characters without spaces (regression test)
================================================================================

?a?a
?a?\]
(?a)

--------------------------------------------------------------------------------

(source
 (char)
 (char)
 (char)
 (char)
 (list
  (char)))
