test/corpus/quote.txt
================================================================================
Quotes
================================================================================

'foo
#'bar
'(x ,y ,@z)
--------------------------------------------------------------------------------

(source
 (quote
  (symbol))
 (fn_quote
  (symbol))
 (quote
  (list
   (cons (symbol)
         (cons (backquote_eval (symbol))
               (cons (splice (symbol))))))))
