test/corpus/special.txt
================================================================================
Special forms
================================================================================

(if x 1 2)
(while x y)

--------------------------------------------------------------------------------

(source
 (special_form
  (symbol)
  (number
   (integer))
  (number
   (integer)))
 (special_form
  (symbol)
  (symbol)))
