test/corpus/string_after_symbol.txt
================================================================================
String after symbol (regression test)
================================================================================

foo"bar"

--------------------------------------------------------------------------------

(source
 (symbol)
 (string
  (string_fragment)))
