test/corpus/string_props.txt
================================================================================
String text properties
================================================================================

#("foo" 0 1 (x y))

--------------------------------------------------------------------------------

(source
 (text_properties
  (string
   (string_fragment))
  (number
   (integer))
  (number
   (integer))
  (list
   (cons (symbol)
         (cons (symbol))))))
