test/corpus/symbols.txt
================================================================================
Symbols
================================================================================

foo-bar
foo/bar
foo?
=
~
$
>
λ
:foo
foo!
foo|bar
foo.bar
foo@bar
foo{bar}
%
&optional
&&
_
.foo
foo-★
1+
\1
nil
\(*\ 1\ 2\)
+-*/_~!@$%^&=:<>{}

--------------------------------------------------------------------------------

(source
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol (boolean))
  (symbol)
  (symbol))
